<resources>
    <string name="app_name">WireUp_test</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_project_button">Create</string>
    /strings used in setProject activity
    <string name="set_subject">Subject</string>
    <string name="set_project_name">Add a name to your project</string>
    <string name="set_project_end_date">Choose an end date for the project</string>
    <string name="add_people">Add people to project</string>
    <string name="fullname">Full Name</string>
    <string name="school">Your School</string>
    <string name="schoolcode">School Code</string>
    <string name="error_projectDate">Invalid end date</string>
    <string name="error_projectName" >Invalid projectname</string>
    <string name="error_projecSubj">Invalid Subject</string>
</resources>
